fixed some wrapping issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,8 @@ nav ul li a {
 .content {
   padding: 40px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .content h1 {
@@ -72,10 +74,10 @@ nav ul li a {
 
 /* Style the footer */
 footer {
-  background-color: #333;
-  color: #fff;
+  color: #000000;
   padding: 20px;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
 }
@@ -114,6 +116,7 @@ footer {
 
   .menu-items {
     margin-top: 20px;
+
   }
 
   .menu-item {
